Se cambia interfaz de la pagina

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,92 @@
     
 }
 
-.home{
-    height: 30px;
+.logo-gesta{
     padding-left: 30px;
+}
+
+.navbar{
+    padding: auto;
+}
+
+body{
+    background-color: white;
+    text-align: center;
+}
+
+.grid-layout{
+    height: 650px;
+    display: grid;
+    grid-template-areas:    'header header'
+                            'menu-lateral contenido'
+                            'footer footer';
+    grid-template-columns: 30% auto;
+    grid-template-rows: 10% auto 10%;
+}
+
+.box{
+    text-align: center;
+    padding: 20px;
+}
+
+.header{
+    border: 1px solid;
+    border-color: #659BFF;
+    padding-top: 20px;
+    grid-area: header;
+    margin-bottom: auto;
+    background-color: white;
+}
+
+.menu-lateral{
+    border: 1px solid;
+    border-color: #659BFF;
+    grid-area: menu-lateral;
+    margin-top: 80px;
+    background-color: whitesmoke;
+}
+
+.contenido{
+    border: 1px solid;
+    border-color: #659BFF;
+    grid-area: contenido;
+    margin-top: 80px;
+    background-color: white;
+}
+
+.footer{
+    grid-area: footer;
+    background-color: white;
+}
+
+.list-group-item{
+    border-radius: 10px;
+    height: 80px;
+}
+
+.list-group p{
+    margin-top: 15px;
+}
+
+.navbar-brand{
+    padding-left: 100px;
+}
+
+.navbar-collapse li{
+    padding-left: 50px;
+}
+
+.flex-container{
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+}
+
+.flex-container p{
+    padding-left: 200px;
+    font-family: Roboto 16px;
+}
+
+.nav-link{
+    font-family: Verdana;
 }
