--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,8 +32,6 @@ body{
 }
 
 .header{
-    border: 1px solid;
-    border-color: #659BFF;
     padding-top: 20px;
     grid-area: header;
     margin-bottom: auto;
@@ -92,3 +90,54 @@ body{
 .nav-link{
     font-family: Verdana;
 }
+
+.header-flex-container{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.header-registro{
+    text-decoration: none;
+    font-family: Verdana;
+    color: #516772;
+}
+
+.btn {
+    background-color: #2196F3;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    outline: none;
+  }
+  
+  .dropdown {
+    position: absolute;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {background-color: #ddd}
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  .btn:hover, .dropdown:hover .btn {
+    background-color: #0b7dda;
+  }
