--- a/public/css/registro.css
+++ b/public/css/registro.css
@@ -132,3 +132,10 @@ body{
   .btn:hover, .dropdown:hover .btn {
     background-color: #0b7dda;
   }
+
+  .logo-home{
+
+    width: 700px;
+    opacity: 0.3;
+
+}
